After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744559 - gstreamer-vaapi does not build on s390x, where guintptr is not compatible with GstVaapiID
gstreamer-vaapi does not build on s390x, where guintptr is not compatible wit...
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
0.5.10
Other Linux
: Normal minor
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 743569
 
 
Reported: 2015-02-15 15:11 UTC by Simon Farnsworth
Modified: 2015-05-04 16:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] window: Correct prototype to match implementation (944 bytes, patch)
2015-02-15 15:15 UTC, Simon Farnsworth
committed Details | Review

Description Simon Farnsworth 2015-02-15 15:11:46 UTC
This is a forwarding upstream of https://bugzilla.redhat.com/show_bug.cgi?id=1191161

On s390x, guintptr and GstVaapiID are not compatible types. The implementation of gst_vaapi_window_new_internal() and all its callers seem to assume that its third argument is a GstVaapiID, while the header gives it guintptr type.

I'm going to attach the patch I'm using to fix this for Fedora.
Comment 1 Simon Farnsworth 2015-02-15 15:15:54 UTC
Created attachment 296876 [details] [review]
[PATCH] window: Correct prototype to match implementation

 gst-libs/gst/vaapi/gstvaapiwindow_priv.h | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 2 Gwenole Beauchesne 2015-02-16 11:10:36 UTC
You are right. Thanks.
Comment 3 Víctor Manuel Jáquez Leal 2015-05-04 16:11:05 UTC
commit e60df073a0db436fb61ee24d3095bc56a27b55b3
Author: Simon Farnsworth <simon@farnz.org.uk>
Date:   Sun Feb 15 15:01:03 2015 +0000

    window: Correct prototype to match implementation
    
    On s390x, guintptr and GstVaapiID are not compatible types. The
    implementation of gst_vaapi_window_new_internal() and all its callers
    seem to assume that its third argument is a GstVaapiID, while the
    header gives it guintptr type.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=744559